--- a/home.html
+++ b/home.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Bienvenidos a home</h1>
-    <a href="index.html">Volver al index</a>
+    <a href="index.html">Volver a index</a>
 </body>
 </html>
